# Chem279-Numerical-Algos-HW3

./: CMakeLists.txt
calculated_output_p1/: C2H2_output.txt  H2_output.txt
include/: CartesianGaussian.hpp  OverlapMatrix.hpp  input_parser.h  molecule.h
src/: CartesianGaussian.cpp  OverlapMatrix.cpp  input_parser.cpp  main.cpp  molecule.cpp
